# agent-v1

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: dependency.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  agent.py  document.py  website.py  wiki.py
app/core/: __init__.py  config.py
app/models/: __init__.py  agent.py  agentstate.py  document.py  website.py  wiki.py
app/services/: __init__.py  agent.py  agent.py.bak  database.py  document.py  indexer.py  memory.py  react_agent.py  retrival_agent.py  sql_agent.py  website.py  wiki.py
app/utils/: logger.py
docs/: agent.md  api.md  architecture.md  developer_guide.md  installation.md  multi-agent.md  overview.md  rag.md  techstack.md  user_guide.md
docs/react_agent/: 01_introduction.md  02_architecture.md  03_implementation.md  04_tools_and_workflow.md  05_api_reference.md  README.md
wiki/: Agentic-AI.md  Rag.md  Techstack.md
