[project]
name = "agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "fastapi>=0.115.8",
    "ipython>=8.32.0",
    "langchain>=0.3.19",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.38",
    "langchain-groq>=0.2.4",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg>=3.2.5",
    "psycopg-pool>=3.2.6",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
